testsuite/tests/annotations/should_fail/annfail03.stderr
annfail03.hs:12:16: error: [GHC-28914]
    • Stage error: ‘InModule’ is bound at stage {1} but used at stage 0
      Hint: quoting [| InModule |] or an enclosing expression would allow the quotation to be used in an earlier stage
    • In the annotation: {-# ANN module InModule #-}

annfail03.hs:14:18: error: [GHC-28914]
    • Stage error: ‘InModule’ is bound at stage {1} but used at stage 0
      Hint: quoting [| InModule |] or an enclosing expression would allow the quotation to be used in an earlier stage
    • In the annotation: {-# ANN type Foo InModule #-}

annfail03.hs:17:11: error: [GHC-28914]
    • Stage error: ‘InModule’ is bound at stage {1} but used at stage 0
      Hint: quoting [| InModule |] or an enclosing expression would allow the quotation to be used in an earlier stage
    • In the annotation: {-# ANN f InModule #-}

